versions/V3.7/README.md
# Refine KA

Refine KA 是供公司内部使用的行业与关键客户筛选工具。程序围绕 37 个 Schneider NS 行业，结合全国、上海、浙江、福建和江西的公开证据，对行业机会与区域企业候选池进行评分和筛选。

## 当前能力

- 37 个 NS 行业排名与战略分组。
- 全国、省份及区/地级市筛选。
- 行业评分权重始终合计 100%。
- 企业候选池覆盖上市公司、未上市融资企业、专精特新企业和重点项目企业。
- 企业以实际经营地归属，可依据总部、工厂、研发中心、分公司或项目所在地进入当地候选池。
- 行业和企业证据保留公开来源链接、可信度与覆盖率。
- Windows 本地运行及便携版打包。

## 评分口径

行业评分包括：出口/外需、工业增加值、招聘岗位、技术突破、政策导向、政府补贴/政府投资。

企业 Top 50 使用独立的公司级评分模型。缺失维度不参与加权计算，同时降低覆盖率。覆盖率表示已取得有效证据的维度权重占总权重的比例。

## 本地启动

```powershell
python app.py
```

也可以运行项目内的 Windows 启动脚本。当前源代码版本使用的本地端口以 `app.py` 中的 `PORT` 为准。

## 数据与安全

- 本仓库仅供公司内部使用，应保持 Private。
- 禁止提交账号密码、Cookie、API Key、访问令牌及个人敏感信息。
- `data/companies.json` 为程序企业候选池；每条正式企业记录应保留可追溯的公开证据。
- 本地数据库、缓存、PID、运行日志和便携版运行环境由 `.gitignore` 排除。

## 版本管理

- 功能或数据迭代均递增版本号。
- Commit 描述本次变化，正式交付版本创建对应 Git Tag。
- 可转发 ZIP 建议通过私有仓库的 Releases 分发。

## 当前版本

V3.7：修复便携版启动端口，并加入实际经营地口径及首批成长型、未上市企业候选池。
