versions/V4.0/README.md
# Refine KA

## V4.0

- 新增与行业筛选平行的企业筛选页面。
- 企业列表支持按地区、区/市和NS行业筛选，并可逐家进入七维详情。
- 企业筛选页采用独立可调权重，七项权重始终合计100%，不影响行业排名。
- 七个企业维度均预留得分、贡献、可信度、具体内容与证据链接位置；本版本先完成交互框架。
- 行业详情中的Top 50继续保留为快速候选池，与完整企业筛选页区分。
- 区/市筛选现已同时作用于行业排名：仅保留当地存在经营企业样本的NS行业，并在地区列及详情标题中显示具体区/市。城市级行业指标缺失时明确标记为省级行业分数，避免与城市数据混淆。

Refine KA 是供公司内部使用的行业与关键客户筛选工具。程序围绕 37 个 Schneider NS 行业，结合全国、上海、浙江、福建和江西的公开证据，对行业机会与区域企业候选池进行评分和筛选。

## 当前能力

- 37 个 NS 行业排名与战略分组。
- 全国、省份及区/地级市筛选。
- 行业评分权重始终合计 100%。
- 企业候选池覆盖上市公司、未上市融资企业、专精特新企业和重点项目企业。
- 企业以实际经营地归属，可依据总部、工厂、研发中心、分公司或项目所在地进入当地候选池。
- 行业和企业证据保留公开来源链接、可信度与覆盖率。
- Windows 本地运行及便携版打包。

## 评分口径

行业评分包括：出口/外需、工业增加值、招聘岗位、技术突破、政策导向、政府补贴/政府投资。

企业 Top 50 使用独立的公司级评分模型。缺失维度不参与加权计算，同时降低覆盖率。覆盖率表示已取得有效证据的维度权重占总权重的比例。

## 本地启动

```powershell
python app.py
```

也可以运行项目内的 Windows 启动脚本。当前源代码版本使用的本地端口以 `app.py` 中的 `PORT` 为准。

## 数据与安全

- 本仓库仅供公司内部使用，应保持 Private。
- 禁止提交账号密码、Cookie、API Key、访问令牌及个人敏感信息。
- `data/companies.json` 为程序企业候选池；每条正式企业记录应保留可追溯的公开证据。
- 本地数据库、缓存、PID、运行日志和便携版运行环境由 `.gitignore` 排除。

## 版本管理

- 功能或数据迭代均递增版本号。
- Commit 描述本次变化，正式交付版本创建对应 Git Tag。
- 可转发 ZIP 建议通过私有仓库的 Releases 分发。

## 当前版本

V3.7：修复便携版启动端口，并加入实际经营地口径及首批成长型、未上市企业候选池。

V3.8：在 Top 50 页面明确区分行业评分与企业评分。右侧滑杆只调整行业排名；企业 Top 50 采用独立的七维固定权重，并单独展示企业总分与企业证据覆盖率。
